2004-04-15  Richard Hult  <richard@imendio.com>

	* src/planner-task-tree.c: (planner_task_tree_move_task_up),
	(planner_task_tree_move_task_down): Patch from Lincoln.

2004-04-15  Richard Hult  <richard@imendio.com>

	* src/planner-window.c (window_do_save_as): Fix build.

2004-04-14  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-project.c: (mrp_project_save_as):
	* src/planner-window.c: (window_do_save_as): Fix bug #139317,
	based on patch from Doroszlai Attila.
	
2004-04-09  Richard Hult  <richard@imendio.com>

	* src/planner-resource-dialog.c: (resource_dialog_name_changed_cb),
	(resource_dialog_short_name_changed_cb),
	(resource_dialog_resource_type_changed_cb),
	(resource_dialog_type_changed_cb),
	(resource_dialog_group_changed_cb),
	(resource_dialog_email_changed_cb),
	(resource_dialog_cost_changed_cb): Block on the correct user data,
	and handle non-numerical input better.

2004-04-08  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-model.c:
	(planner_gantt_model_get_path_from_task):
	* src/planner-task-tree.c: (planner_task_tree_remove_task),
	(planner_task_tree_move_task_up),
	(planner_task_tree_move_task_down),
	(planner_task_tree_set_anchor): Commit patch for bug #138595 from
	Lincoln Phipps. Also clean up task removal a bit and add anchor
	handling to Lincoln's patch.

2004-04-07  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-model.c
	(planner_gantt_model_get_path_from_task): Return NULL if the task
	is not in the tree. Gets rid of warning when removing tasks with
	the undo code.

2004-04-08  Adam Weinberger  <adamw@gnome.org>

	* configure.in: Added en_CA to ALL_LINGUAS.

2004-04-06  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-task-manager.c:
	* src/planner-gantt-chart.c:
	* src/planner-relation-arrow.c:
	* src/planner-task-dialog.c: (task_dialog_pred_cell_edited): Fix
	bug #129140, implement remaining task constraint types. Patch from
	Corey Schuhen.

2004-04-06  Richard Hult  <richard@imendio.com>
